TP_5/Flex-Bison/obj/Analizador.output
No terminales inútiles en la gramática

   opcional_lista_calificadores_de_tipo
   lista_calificadores_de_tipo


Terminales no usados en la gramática

   INCLUDE
   DEFINE
   IFX


Reglas inútiles en la gramática

  234 opcional_lista_calificadores_de_tipo: %empty
  235                                     | lista_calificadores_de_tipo

  236 lista_calificadores_de_tipo: calificador_de_tipo
  237                            | lista_calificadores_de_tipo calificador_de_tipo


Estado 350 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: input $end

    1 input: %empty

    2 $@1: %empty

    3 input: input $@1 line

    4 line: declaracion_externa
    5     | sentencia

    6 $@2: %empty

    7 line: error $@2 ';'
    8     | ERROR_LEXICO

    9 declaracion_externa: definicion_de_funcion
   10                    | declaracion

   11 $@3: %empty

   12 definicion_de_funcion: especificadores_de_declaracion declarador $@3 opcional_lista_de_declaracion

   13 opcional_lista_de_declaracion: sentencia_compuesta
   14                              | lista_de_declaracion sentencia_compuesta

   15 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   16            | especificadores_de_declaracion ';'

   17 lista_de_declaracion: declaracion
   18                     | lista_de_declaracion declaracion

   19 especificadores_de_declaracion: especificador_categoria_almacenamiento especificadores_de_declaracion
   20                               | especificador_categoria_almacenamiento
   21                               | especificador_de_tipo especificadores_de_declaracion
   22                               | especificador_de_tipo
   23                               | calificador_de_tipo especificadores_de_declaracion
   24                               | calificador_de_tipo

   25 especificador_categoria_almacenamiento: TYPEDEF

   26 especificador_de_tipo: TIPO_DATO
   27                      | SIGNED
   28                      | UNSIGNED
   29                      | especificador_estructura_o_union
   30                      | especificador_enum
   31                      | nombre_typedef

   32 calificador_de_tipo: CONST
   33                    | VOLATILE

   34 especificador_estructura_o_union: estructura_o_union IDENTIFICADOR '{' lista_declaraciones_struct '}'
   35                                 | estructura_o_union '{' lista_declaraciones_struct '}'
   36                                 | estructura_o_union IDENTIFICADOR

   37 estructura_o_union: STRUCT
   38                   | UNION

   39 lista_declaraciones_struct: declaracion_struct
   40                           | lista_declaraciones_struct declaracion_struct

   41 lista_declaradores_init: declarador_init
   42                        | lista_declaradores_init ',' declarador_init

   43 declarador_init: declarador
   44                | declarador '=' inicializador

   45 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'

   46 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   47                                | especificador_de_tipo
   48                                | calificador_de_tipo lista_calificador_especificador
   49                                | calificador_de_tipo

   50 lista_declaradores_struct: declarador_struct
   51                          | lista_declaradores_struct ',' declarador_struct

   52 declarador_struct: declarador
   53                  | declarador ':' expresion_constante
   54                  | ':' expresion_constante

   55 especificador_enum: ENUM IDENTIFICADOR '{' lista_de_enumerador '}'
   56                   | ENUM '{' lista_de_enumerador '}'
   57                   | ENUM IDENTIFICADOR

   58 lista_de_enumerador: enumerador
   59                    | lista_de_enumerador ',' enumerador

   60 enumerador: IDENTIFICADOR
   61           | IDENTIFICADOR '=' expresion_constante

   62 declarador: apuntador declarador_directo
   63           | declarador_directo

   64 declarador_directo: IDENTIFICADOR
   65                   | declarador_directo '[' expresion_constante ']'
   66                   | declarador_directo '[' ']'

   67 $@4: %empty

   68 declarador_directo: declarador_directo $@4 '(' lista_op_parentesis

   69 $@5: %empty

   70 lista_op_parentesis: lista_tipos_de_parametro $@5 ')'

   71 $@6: %empty

   72 lista_op_parentesis: lista_de_identificadores $@6 ')'

   73 $@7: %empty

   74 lista_op_parentesis: $@7 ')'

   75 $@8: %empty

   76 apuntador: '*' $@8 apuntador_aux

   77 apuntador_aux: %empty

   78 $@9: %empty

   79 apuntador_aux: '*' $@9 apuntador_aux

   80 lista_tipos_de_parametro: lista_de_parametros

   81 lista_de_parametros: declaracion_de_parametro
   82                    | lista_de_parametros ',' declaracion_de_parametro

   83 declaracion_de_parametro: especificadores_de_declaracion declarador
   84                         | especificadores_de_declaracion declarador_abstracto
   85                         | especificadores_de_declaracion

   86 lista_de_identificadores: IDENTIFICADOR
   87                         | lista_de_identificadores ',' IDENTIFICADOR

   88 inicializador: expresion_de_asignacion
   89              | '{' lista_de_inicializadores '}'
   90              | '{' lista_de_inicializadores ',' '}'

   91 lista_de_inicializadores: inicializador
   92                         | lista_de_inicializadores ',' inicializador

   93 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
   94               | lista_calificador_especificador

   95 declarador_abstracto: apuntador
   96                     | apuntador declarador_abstracto_directo
   97                     | declarador_abstracto_directo

   98 declarador_abstracto_directo: '(' declarador_abstracto ')'
   99                             | declarador_abstracto_directo '[' expresion_constante ']'
  100                             | '[' expresion_constante ']'
  101                             | declarador_abstracto_directo '[' ']'
  102                             | '[' ']'
  103                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
  104                             | '(' lista_tipos_de_parametro ')'
  105                             | declarador_abstracto_directo '(' ')'
  106                             | '(' ')'

  107 nombre_typedef: 't'

  108 sentencia: sentencia_etiquetada
  109          | sentencia_expresion
  110          | sentencia_compuesta
  111          | sentencia_de_seleccion
  112          | sentencia_de_iteracion
  113          | sentencia_de_salto

  114 sentencia_etiquetada: IDENTIFICADOR ':' sentencia
  115                     | CASE expresion_constante ':' sentencia
  116                     | DEFAULT ':' sentencia

  117 sentencia_expresion: expresion ';'
  118                    | ';'

  119 $@10: %empty

  120 sentencia_compuesta: '{' $@10 sentencia_compuesta_derivado

  121 sentencia_compuesta_derivado: lista_de_declaracion opcional_sentencia_compuesta
  122                             | lista_de_sentencias '}'
  123                             | '}'

  124 opcional_sentencia_compuesta: lista_de_sentencias '}'
  125                             | '}'

  126 lista_de_sentencias: sentencia
  127                    | lista_de_sentencias sentencia

  128 $@11: %empty

  129 $@12: %empty

  130 $@13: %empty

  131 $@14: %empty

  132 sentencia_de_seleccion: IF $@11 '(' expresion $@12 ')' $@13 sentencia opcionElse $@14

  133 $@15: %empty

  134 $@16: %empty

  135 $@17: %empty

  136 $@18: %empty

  137 sentencia_de_seleccion: SWITCH $@15 '(' expresion $@16 ')' $@17 sentencia $@18

  138 opcionElse: %empty
  139           | ELSE sentencia

  140 $@19: %empty

  141 $@20: %empty

  142 $@21: %empty

  143 $@22: %empty

  144 sentencia_de_iteracion: WHILE $@19 '(' expresion $@20 ')' $@21 sentencia $@22

  145 $@23: %empty

  146 $@24: %empty

  147 $@25: %empty

  148 $@26: %empty

  149 sentencia_de_iteracion: DO $@23 $@24 sentencia $@25 WHILE '(' expresion $@26 ')' ';'

  150 $@27: %empty

  151 $@28: %empty

  152 $@29: %empty

  153 sentencia_de_iteracion: FOR $@27 '(' opcional_expresion ';' opcional_expresion ';' opcional_expresion ')' $@28 sentencia $@29

  154 opcional_expresion: %empty
  155                   | expresion

  156 sentencia_de_salto: GOTO IDENTIFICADOR ';'
  157                   | CONTINUE ';'
  158                   | BREAK ';'
  159                   | RETURN expresion ';'
  160                   | RETURN ';'

  161 expresion: expresion_de_asignacion
  162          | expresion ',' expresion_de_asignacion

  163 expresion_de_asignacion: expresion_condicional

  164 $@30: %empty

  165 expresion_de_asignacion: expresion_unaria operador_de_asignacion $@30 expresion_de_asignacion

  166 operador_de_asignacion: ASIGNACION_DECREMENTO
  167                       | ASIGNACION_DIVISION
  168                       | ASIGNACION_INCREMENTO
  169                       | ASIGNACION_PRODUCTO
  170                       | '='

  171 expresion_condicional: expresion_logica_or
  172                      | expresion_logica_or '?' expresion ':' expresion_condicional

  173 expresion_constante: expresion_condicional

  174 expresion_logica_or: expresion_logica_and
  175                    | expresion_logica_or OR_LOGICO expresion_logica_and

  176 expresion_logica_and: expresion_or_inclusivo
  177                     | expresion_logica_and AND_LOGICO expresion_or_inclusivo

  178 expresion_or_inclusivo: expresion_or_exclusivo
  179                       | expresion_or_inclusivo '|' expresion_or_exclusivo

  180 expresion_or_exclusivo: expresion_and
  181                       | expresion_or_exclusivo '^' expresion_and

  182 expresion_and: expresion_de_igualdad
  183              | expresion_and '&' expresion_de_igualdad

  184 expresion_de_igualdad: expresion_relacional
  185                      | expresion_de_igualdad IGUAL_IGUAL expresion_relacional
  186                      | expresion_de_igualdad DISTINTO expresion_relacional

  187 expresion_relacional: expresion_de_corrimiento
  188                     | expresion_relacional '<' expresion_de_corrimiento
  189                     | expresion_relacional '>' expresion_de_corrimiento
  190                     | expresion_relacional MENOR_IGUAL expresion_de_corrimiento
  191                     | expresion_relacional MAYOR_IGUAL expresion_de_corrimiento

  192 expresion_de_corrimiento: expresion_aditiva
  193                         | expresion_de_corrimiento CORRIMIENTO_A_IZQUIERDA expresion_aditiva
  194                         | expresion_de_corrimiento CORRIMIENTO_A_DERECHA expresion_aditiva

  195 expresion_aditiva: expresion_multiplicativa

  196 $@31: %empty

  197 expresion_aditiva: expresion_aditiva $@31 '+' expresion_multiplicativa
  198                  | expresion_aditiva '-' expresion_multiplicativa

  199 expresion_multiplicativa: expresion_cast
  200                         | expresion_multiplicativa '*' expresion_cast
  201                         | expresion_multiplicativa '/' expresion_cast
  202                         | expresion_multiplicativa '%' expresion_cast

  203 expresion_cast: expresion_unaria
  204               | '(' nombre_de_tipo ')' expresion_cast

  205 expresion_unaria: expresion_posfija
  206                 | MENOS_MENOS expresion_unaria
  207                 | MAS_MAS expresion_unaria
  208                 | operador_unario expresion_cast
  209                 | SIZEOF expresion_unaria
  210                 | SIZEOF '(' nombre_de_tipo ')'

  211 operador_unario: '&'
  212                | '+'
  213                | '-'
  214                | '~'
  215                | '!'

  216 expresion_posfija: expresion_primaria
  217                  | expresion_posfija '.' IDENTIFICADOR
  218                  | expresion_posfija '[' expresion ']'

  219 $@32: %empty

  220 expresion_posfija: expresion_posfija '(' $@32 opcional_lista_expresiones_argumento
  221                  | expresion_posfija PUNTERO_FLECHA IDENTIFICADOR
  222                  | expresion_posfija MENOS_MENOS
  223                  | expresion_posfija MAS_MAS

  224 opcional_lista_expresiones_argumento: ')'
  225                                     | lista_expresiones_argumento ')'

  226 expresion_primaria: IDENTIFICADOR
  227                   | constante
  228                   | LITERAL_CADENA
  229                   | '(' expresion ')'

  230 lista_expresiones_argumento: expresion_de_asignacion
  231                            | lista_expresiones_argumento ',' expresion_de_asignacion

  232 constante: NUM
  233          | NUM_REAL


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 215
'%' (37) 202
'&' (38) 183 211
'(' (40) 68 98 103 104 105 106 132 137 144 149 153 204 210 220 229
')' (41) 70 72 74 98 103 104 105 106 132 137 144 149 153 204 210 224
    225 229
'*' (42) 76 79 200
'+' (43) 197 212
',' (44) 42 51 59 82 87 90 92 162 231
'-' (45) 198 213
'.' (46) 217
'/' (47) 201
':' (58) 53 54 114 115 116 172
';' (59) 7 15 16 45 117 118 149 153 156 157 158 159 160
'<' (60) 188
'=' (61) 44 61 170
'>' (62) 189
'?' (63) 172
'[' (91) 65 66 99 100 101 102 218
']' (93) 65 66 99 100 101 102 218
'^' (94) 181
't' (116) 107
'{' (123) 34 35 55 56 89 90 120
'|' (124) 179
'}' (125) 34 35 55 56 89 90 122 123 124 125
'~' (126) 214
error (256) 7
GOTO (258) 156
VOLATILE (259) 33
TIPO_DATO (260) 26
SIGNED (261) 27
UNSIGNED (262) 28
ENUM (263) 55 56 57
TYPEDEF (264) 25
AND_LOGICO (265) 177
OR_LOGICO (266) 175
CONST (267) 32
CASE (268) 115
DEFAULT (269) 116
STRUCT (270) 37
UNION (271) 38
IGUAL_IGUAL (272) 185
DISTINTO (273) 186
MAYOR_IGUAL (274) 191
MENOR_IGUAL (275) 190
MAS_MAS (276) 207 223
MENOS_MENOS (277) 206 222
ASIGNACION_INCREMENTO (278) 168
ASIGNACION_DECREMENTO (279) 166
ASIGNACION_PRODUCTO (280) 169
ASIGNACION_DIVISION (281) 167
CORRIMIENTO_A_IZQUIERDA (282) 193
CORRIMIENTO_A_DERECHA (283) 194
NUM_REAL (284) 233
PUNTERO_FLECHA (285) 221
NUM (286) 232
IDENTIFICADOR (287) 34 36 55 57 60 61 64 86 87 114 156 217 221 226
LITERAL_CADENA (288) 228
SIZEOF (289) 209 210
IF (290) 132
BREAK (291) 158
FOR (292) 153
WHILE (293) 144 149
DO (294) 149
SWITCH (295) 137
RETURN (296) 159 160
CONTINUE (297) 157
ERROR_LEXICO (298) 8
INCLUDE (299)
DEFINE (300)
IFX (301)
ELSE (302) 139


No terminales con las reglas donde aparecen

$accept (73)
    en la izquierda: 0
input (74)
    en la izquierda: 1 3, en la derecha: 0 3
$@1 (75)
    en la izquierda: 2, en la derecha: 3
line (76)
    en la izquierda: 4 5 7 8, en la derecha: 3
$@2 (77)
    en la izquierda: 6, en la derecha: 7
declaracion_externa (78)
    en la izquierda: 9 10, en la derecha: 4
definicion_de_funcion (79)
    en la izquierda: 12, en la derecha: 9
$@3 (80)
    en la izquierda: 11, en la derecha: 12
opcional_lista_de_declaracion (81)
    en la izquierda: 13 14, en la derecha: 12
declaracion (82)
    en la izquierda: 15 16, en la derecha: 10 17 18
lista_de_declaracion (83)
    en la izquierda: 17 18, en la derecha: 14 18 121
especificadores_de_declaracion (84)
    en la izquierda: 19 20 21 22 23 24, en la derecha: 12 15 16 19
    21 23 83 84 85
especificador_categoria_almacenamiento (85)
    en la izquierda: 25, en la derecha: 19 20
especificador_de_tipo (86)
    en la izquierda: 26 27 28 29 30 31, en la derecha: 21 22 46 47
calificador_de_tipo (87)
    en la izquierda: 32 33, en la derecha: 23 24 48 49
especificador_estructura_o_union (88)
    en la izquierda: 34 35 36, en la derecha: 29
estructura_o_union (89)
    en la izquierda: 37 38, en la derecha: 34 35 36
lista_declaraciones_struct (90)
    en la izquierda: 39 40, en la derecha: 34 35 40
lista_declaradores_init (91)
    en la izquierda: 41 42, en la derecha: 15 42
declarador_init (92)
    en la izquierda: 43 44, en la derecha: 41 42
declaracion_struct (93)
    en la izquierda: 45, en la derecha: 39 40
lista_calificador_especificador (94)
    en la izquierda: 46 47 48 49, en la derecha: 45 46 48 93 94
lista_declaradores_struct (95)
    en la izquierda: 50 51, en la derecha: 45 51
declarador_struct (96)
    en la izquierda: 52 53 54, en la derecha: 50 51
especificador_enum (97)
    en la izquierda: 55 56 57, en la derecha: 30
lista_de_enumerador (98)
    en la izquierda: 58 59, en la derecha: 55 56 59
enumerador (99)
    en la izquierda: 60 61, en la derecha: 58 59
declarador (100)
    en la izquierda: 62 63, en la derecha: 12 43 44 52 53 83
declarador_directo (101)
    en la izquierda: 64 65 66 68, en la derecha: 62 63 65 66 68
$@4 (102)
    en la izquierda: 67, en la derecha: 68
lista_op_parentesis (103)
    en la izquierda: 70 72 74, en la derecha: 68
$@5 (104)
    en la izquierda: 69, en la derecha: 70
$@6 (105)
    en la izquierda: 71, en la derecha: 72
$@7 (106)
    en la izquierda: 73, en la derecha: 74
apuntador (107)
    en la izquierda: 76, en la derecha: 62 95 96
$@8 (108)
    en la izquierda: 75, en la derecha: 76
apuntador_aux (109)
    en la izquierda: 77 79, en la derecha: 76 79
$@9 (110)
    en la izquierda: 78, en la derecha: 79
lista_tipos_de_parametro (111)
    en la izquierda: 80, en la derecha: 70 103 104
lista_de_parametros (112)
    en la izquierda: 81 82, en la derecha: 80 82
declaracion_de_parametro (113)
    en la izquierda: 83 84 85, en la derecha: 81 82
lista_de_identificadores (114)
    en la izquierda: 86 87, en la derecha: 72 87
inicializador (115)
    en la izquierda: 88 89 90, en la derecha: 44 91 92
lista_de_inicializadores (116)
    en la izquierda: 91 92, en la derecha: 89 90 92
nombre_de_tipo (117)
    en la izquierda: 93 94, en la derecha: 204 210
declarador_abstracto (118)
    en la izquierda: 95 96 97, en la derecha: 84 93 98
declarador_abstracto_directo (119)
    en la izquierda: 98 99 100 101 102 103 104 105 106, en la derecha:
    96 97 99 101 103 105
nombre_typedef (120)
    en la izquierda: 107, en la derecha: 31
sentencia (121)
    en la izquierda: 108 109 110 111 112 113, en la derecha: 5 114
    115 116 126 127 132 137 139 144 149 153
sentencia_etiquetada (122)
    en la izquierda: 114 115 116, en la derecha: 108
sentencia_expresion (123)
    en la izquierda: 117 118, en la derecha: 109
sentencia_compuesta (124)
    en la izquierda: 120, en la derecha: 13 14 110
$@10 (125)
    en la izquierda: 119, en la derecha: 120
sentencia_compuesta_derivado (126)
    en la izquierda: 121 122 123, en la derecha: 120
opcional_sentencia_compuesta (127)
    en la izquierda: 124 125, en la derecha: 121
lista_de_sentencias (128)
    en la izquierda: 126 127, en la derecha: 122 124 127
sentencia_de_seleccion (129)
    en la izquierda: 132 137, en la derecha: 111
$@11 (130)
    en la izquierda: 128, en la derecha: 132
$@12 (131)
    en la izquierda: 129, en la derecha: 132
$@13 (132)
    en la izquierda: 130, en la derecha: 132
$@14 (133)
    en la izquierda: 131, en la derecha: 132
$@15 (134)
    en la izquierda: 133, en la derecha: 137
$@16 (135)
    en la izquierda: 134, en la derecha: 137
$@17 (136)
    en la izquierda: 135, en la derecha: 137
$@18 (137)
    en la izquierda: 136, en la derecha: 137
opcionElse (138)
    en la izquierda: 138 139, en la derecha: 132
sentencia_de_iteracion (139)
    en la izquierda: 144 149 153, en la derecha: 112
$@19 (140)
    en la izquierda: 140, en la derecha: 144
$@20 (141)
    en la izquierda: 141, en la derecha: 144
$@21 (142)
    en la izquierda: 142, en la derecha: 144
$@22 (143)
    en la izquierda: 143, en la derecha: 144
$@23 (144)
    en la izquierda: 145, en la derecha: 149
$@24 (145)
    en la izquierda: 146, en la derecha: 149
$@25 (146)
    en la izquierda: 147, en la derecha: 149
$@26 (147)
    en la izquierda: 148, en la derecha: 149
$@27 (148)
    en la izquierda: 150, en la derecha: 153
$@28 (149)
    en la izquierda: 151, en la derecha: 153
$@29 (150)
    en la izquierda: 152, en la derecha: 153
opcional_expresion (151)
    en la izquierda: 154 155, en la derecha: 153
sentencia_de_salto (152)
    en la izquierda: 156 157 158 159 160, en la derecha: 113
expresion (153)
    en la izquierda: 161 162, en la derecha: 117 132 137 144 149 155
    159 162 172 218 229
expresion_de_asignacion (154)
    en la izquierda: 163 165, en la derecha: 88 161 162 165 230 231
$@30 (155)
    en la izquierda: 164, en la derecha: 165
operador_de_asignacion (156)
    en la izquierda: 166 167 168 169 170, en la derecha: 165
expresion_condicional (157)
    en la izquierda: 171 172, en la derecha: 163 172 173
expresion_constante (158)
    en la izquierda: 173, en la derecha: 53 54 61 65 99 100 115
expresion_logica_or (159)
    en la izquierda: 174 175, en la derecha: 171 172 175
expresion_logica_and (160)
    en la izquierda: 176 177, en la derecha: 174 175 177
expresion_or_inclusivo (161)
    en la izquierda: 178 179, en la derecha: 176 177 179
expresion_or_exclusivo (162)
    en la izquierda: 180 181, en la derecha: 178 179 181
expresion_and (163)
    en la izquierda: 182 183, en la derecha: 180 181 183
expresion_de_igualdad (164)
    en la izquierda: 184 185 186, en la derecha: 182 183 185 186
expresion_relacional (165)
    en la izquierda: 187 188 189 190 191, en la derecha: 184 185 186
    188 189 190 191
expresion_de_corrimiento (166)
    en la izquierda: 192 193 194, en la derecha: 187 188 189 190 191
    193 194
expresion_aditiva (167)
    en la izquierda: 195 197 198, en la derecha: 192 193 194 197 198
$@31 (168)
    en la izquierda: 196, en la derecha: 197
expresion_multiplicativa (169)
    en la izquierda: 199 200 201 202, en la derecha: 195 197 198 200
    201 202
expresion_cast (170)
    en la izquierda: 203 204, en la derecha: 199 200 201 202 204 208
expresion_unaria (171)
    en la izquierda: 205 206 207 208 209 210, en la derecha: 165 203
    206 207 209
operador_unario (172)
    en la izquierda: 211 212 213 214 215, en la derecha: 208
expresion_posfija (173)
    en la izquierda: 216 217 218 220 221 222 223, en la derecha: 205
    217 218 220 221 222 223
$@32 (174)
    en la izquierda: 219, en la derecha: 220
opcional_lista_expresiones_argumento (175)
    en la izquierda: 224 225, en la derecha: 220
expresion_primaria (176)
    en la izquierda: 226 227 228 229, en la derecha: 216
lista_expresiones_argumento (177)
    en la izquierda: 230 231, en la derecha: 225 231
constante (178)
    en la izquierda: 232 233, en la derecha: 227


Estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


Estado 1

    0 $accept: input . $end
    3 input: input . $@1 line

    $end  desplazar e ir al estado 2

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 3


Estado 2

    0 $accept: input $end .

    $default  aceptar


Estado 3

    3 input: input $@1 . line

    error           desplazar e ir al estado 4
    GOTO            desplazar e ir al estado 5
    VOLATILE        desplazar e ir al estado 6
    TIPO_DATO       desplazar e ir al estado 7
    SIGNED          desplazar e ir al estado 8
    UNSIGNED        desplazar e ir al estado 9
    ENUM            desplazar e ir al estado 10
    TYPEDEF         desplazar e ir al estado 11
    CONST           desplazar e ir al estado 12
    CASE            desplazar e ir al estado 13
    DEFAULT         desplazar e ir al estado 14
    STRUCT          desplazar e ir al estado 15
    UNION           desplazar e ir al estado 16
    MAS_MAS         desplazar e ir al estado 17
    MENOS_MENOS     desplazar e ir al estado 18
    NUM_REAL        desplazar e ir al estado 19
    NUM             desplazar e ir al estado 20
    IDENTIFICADOR   desplazar e ir al estado 21
    LITERAL_CADENA  desplazar e ir al estado 22
    SIZEOF          desplazar e ir al estado 23
    IF              desplazar e ir al estado 24
    BREAK           desplazar e ir al estado 25
    FOR             desplazar e ir al estado 26
    WHILE           desplazar e ir al estado 27
    DO              desplazar e ir al estado 28
    SWITCH          desplazar e ir al estado 29
    RETURN          desplazar e ir al estado 30
    CONTINUE        desplazar e ir al estado 31
    ERROR_LEXICO    desplazar e ir al estado 32
    '+'             desplazar e ir al estado 33
    '-'             desplazar e ir al estado 34
    ';'             desplazar e ir al estado 35
    '{'             desplazar e ir al estado 36
    '('             desplazar e ir al estado 37
    't'             desplazar e ir al estado 38
    '&'             desplazar e ir al estado 39
    '~'             desplazar e ir al estado 40
    '!'             desplazar e ir al estado 41

    line                                    ir al estado 42
    declaracion_externa                     ir al estado 43
    definicion_de_funcion                   ir al estado 44
    declaracion                             ir al estado 45
    especificadores_de_declaracion          ir al estado 46
    especificador_categoria_almacenamiento  ir al estado 47
    especificador_de_tipo                   ir al estado 48
    calificador_de_tipo                     ir al estado 49
    especificador_estructura_o_union        ir al estado 50
    estructura_o_union                      ir al estado 51
    especificador_enum                      ir al estado 52
    nombre_typedef                          ir al estado 53
    sentencia                               ir al estado 54
    sentencia_etiquetada                    ir al estado 55
    sentencia_expresion                     ir al estado 56
    sentencia_compuesta                     ir al estado 57
    sentencia_de_seleccion                  ir al estado 58
    sentencia_de_iteracion                  ir al estado 59
    sentencia_de_salto                      ir al estado 60
    expresion                               ir al estado 61
    expresion_de_asignacion                 ir al estado 62
    expresion_condicional                   ir al estado 63
    expresion_logica_or                     ir al estado 64
    expresion_logica_and                    ir al estado 65
    expresion_or_inclusivo                  ir al estado 66
    expresion_or_exclusivo                  ir al estado 67
    expresion_and                           ir al estado 68
    expresion_de_igualdad                   ir al estado 69
    expresion_relacional                    ir al estado 70
    expresion_de_corrimiento                ir al estado 71
    expresion_aditiva                       ir al estado 72
    expresion_multiplicativa                ir al estado 73
    expresion_cast                          ir al estado 74
    expresion_unaria                        ir al estado 75
    operador_unario                         ir al estado 76
    expresion_posfija                       ir al estado 77
    expresion_primaria                      ir al estado 78
    constante                               ir al estado 79


Estado 4

    7 line: error . $@2 ';'

    $default  reduce usando la regla 6 ($@2)

    $@2  ir al estado 80


Estado 5

  156 sentencia_de_salto: GOTO . IDENTIFICADOR ';'

    IDENTIFICADOR  desplazar e ir al estado 81


Estado 6

   33 calificador_de_tipo: VOLATILE .

    $default  reduce usando la regla 33 (calificador_de_tipo)


Estado 7

   26 especificador_de_tipo: TIPO_DATO .

    $default  reduce usando la regla 26 (especificador_de_tipo)


Estado 8

   27 especificador_de_tipo: SIGNED .

    $default  reduce usando la regla 27 (especificador_de_tipo)


Estado 9

   28 especificador_de_tipo: UNSIGNED .

    $default  reduce usando la regla 28 (especificador_de_tipo)


Estado 10

   55 especificador_enum: ENUM . IDENTIFICADOR '{' lista_de_enumerador '}'
   56                   | ENUM . '{' lista_de_enumerador '}'
   57                   | ENUM . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 82
    '{'            desplazar e ir al estado 83


Estado 11

   25 especificador_categoria_almacenamiento: TYPEDEF .

    $default  reduce usando la regla 25 (especificador_categoria_almacenamiento)


Estado 12

   32 calificador_de_tipo: CONST .

    $default  reduce usando la regla 32 (calificador_de_tipo)


Estado 13

  115 sentencia_etiquetada: CASE . expresion_constante ':' sentencia

    MAS_MAS         desplazar e ir al estado 17
    MENOS_MENOS     desplazar e ir al estado 18
    NUM_REAL        desplazar e ir al estado 19
    NUM             desplazar e ir al estado 20
    IDENTIFICADOR   desplazar e ir al estado 84
    LITERAL_CADENA  desplazar e ir al estado 22
    SIZEOF          desplazar e ir al estado 23
    '+'             desplazar e ir al estado 33
    '-'             desplazar e ir al estado 34
    '('             desplazar e ir al estado 37
    '&'             desplazar e ir al estado 39
    '~'             desplazar e ir al estado 40
    '!'             desplazar e ir al estado 41

    expresion_condicional     ir al estado 85
    expresion_constante       ir al estado 86
    expresion_logica_or       ir al estado 64
    expresion_logica_and      ir al estado 65
    expresion_or_inclusivo    ir al estado 66
    expresion_or_exclusivo    ir al estado 67
    expresion_and             ir al estado 68
    expresion_de_igualdad     ir al estado 69
    expresion_relacional      ir al estado 70
    expresion_de_corrimiento  ir al estado 71
    expresion_aditiva         ir al estado 72
    expresion_multiplicativa  ir al estado 73
    expresion_cast            ir al estado 74
    expresion_unaria          ir al estado 87
    operador_unario           ir al estado 76
    expresion_posfija         ir al estado 77
    expresion_primaria        ir al estado 78
    constante                 ir al estado 79


Estado 14

  116 sentencia_etiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 88


Estado 15

   37 estructura_o_union: STRUCT .

    $default  reduce usando la regla 37 (estructura_o_union)


Estado 16

   38 estructura_o_union: UNION .

    $default  reduce usando la regla 38 (estructura_o_union)


Estado 17

  207 expresion_unaria: MAS_MAS . expresion_unaria

    MAS_MAS         desplazar e ir al estado 17
    MENOS_MENOS     desplazar e ir al estado 18
    NUM_REAL        desplazar e ir al estado 19
    NUM             desplazar e ir al estado 20
    IDENTIFICADOR   desplazar e ir al estado 84
    LITERAL_CADENA  desplazar e ir al estado 22
    SIZEOF          desplazar e ir al estado 23
    '+'             desplazar e ir al estado 33
    '-'             desplazar e ir al estado 34
    '('             desplazar e ir al estado 89
    '&'             desplazar e ir al estado 39
    '~'             desplazar e ir al estado 40
    '!'             desplazar e ir al estado 41

    expresion_unaria    ir al estado 90
    operador_unario     ir al estado 76
    expresion_posfija   ir al estado 77
    expresion_primaria  ir al estado 78
    constante           ir al estado 79


Estado 18

  206 expresion_unaria: MENOS_MENOS . expresion_unaria

    MAS_MAS         desplazar e ir al estado 17
    MENOS_MENOS     desplazar e ir al estado 18
    NUM_REAL        desplazar e ir al estado 19
    NUM             desplazar e ir al estado 20
    IDENTIFICADOR   desplazar e ir al estado 84
    LITERAL_CADENA  desplazar e ir al estado 22
    SIZEOF          desplazar e ir al estado 23
    '+'             desplazar e ir al estado 33
    '-'             desplazar e ir al estado 34
    '('             desplazar e ir al estado 89
    '&'             desplazar e ir al estado 39
    '~'             desplazar e ir al estado 40
    '!'             desplazar e ir al estado 41

    expresion_unaria    ir al estado 91
    operador_unario     ir al estado 76
    expresion_posfija   ir al estado 77
    expresion_primaria  ir al estado 78
    constante           ir al estado 79


Estado 19

  233 constante: NUM_REAL .

    $default  reduce usando la regla 233 (constante)


Estado 20

  232 constante: NUM .

    $default  reduce usando la regla 232 (constante)


Estado 21

  114 sentencia_etiquetada: IDENTIFICADOR . ':' sentencia
  226 expresion_primaria: IDENTIFICADOR .

    ':'  desplazar e ir al estado 92

    $default  reduce usando la regla 226 (expresion_primaria)


Estado 22

  228 expresion_primaria: LITERAL_CADENA .

    $default  reduce usando la regla 228 (expresion_primaria)


Estado 23

  209 expresion_unaria: SIZEOF . expresion_unaria
  210                 | SIZEOF . '(' nombre_de_tipo ')'

    MAS_MAS         desplazar e ir al estado 17
    MENOS_MENOS     desplazar e ir al estado 18
    NUM_REAL        desplazar e ir al estado 19
    NUM             desplazar e ir al estado 20
    IDENTIFICADOR   desplazar e ir al estado 84
    LITERAL_CADENA  desplazar e ir al estado 22
    SIZEOF          desplazar e ir al estado 23
    '+'             desplazar e ir al estado 33
    '-'             desplazar e ir al estado 34
    '('             desplazar e ir al estado 93
    '&'             desplazar e ir al estado 39
    '~'             desplazar e ir al estado 40
    '!'             desplazar e ir al estado 41

    expresion_unaria    ir al estado 94
    operador_unario     ir al estado 76
    expresion_posfija   ir al estado 77
    expresion_primaria  ir al estado 78
    constante           ir al estado 79


Estado 24

  132 sentencia_de_seleccion: IF . $@11 '(' expresion $@12 ')' $@13 sentencia opcionElse $@14

    $default  reduce usando la regla 128 ($@11)

    $@11  ir al estado 95


Estado 25

  158 sentencia_de_salto: BREAK . ';'

    ';'  desplazar e ir al estado 96


Estado 26

  153 sentencia_de_iteracion: FOR . $@27 '(' opcional_expresion ';' opcional_expresion ';' opcional_expresion ')' $@28 sentencia $@29

    $default  reduce usando la regla 150 ($@27)

    $@27  ir al estado 97


Estado 27

  144 sentencia_de_iteracion: WHILE . $@19 '(' expresion $@20 ')' $@21 sentencia $@22

    $default  reduce usando la regla 140 ($@19)

    $@19  ir al estado 98


Estado 28

  149 sentencia_de_iteracion: DO . $@23 $@24 sentencia $@25 WHILE '(' expresion $@26 ')' ';'

    $default  reduce usando la regla 145 ($@23)

    $@23  ir al estado 99


Estado 29

  137 sentencia_de_seleccion: SWITCH . $@15 '(' expresion $@16 ')' $@17 sentencia $@18

    $default  reduce usando la regla 133 ($@15)

    $@15  ir al estado 100


Estado 30
